# src/types/either.ts
@@ -1,0 +1,5 @@
+export interface Either<LeftType, RightType> {
+    left?: LeftType;
+    right?: RightType;
+}
+
